src/objects/Internal_Recruiting__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Herndon, VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edmond, OK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Commission__c</fullName>
        <label>Commission</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_City__c</fullName>
        <label>Current City</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Role__c</fullName>
        <label>Current Role</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Salary__c</fullName>
        <label>Current Salary</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desired_salary__c</fullName>
        <label>Desired salary</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_address__c</fullName>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Experience__c</fullName>
        <label>Experience</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fit__c</fullName>
        <label>Fit</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Graduated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Graduated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graduation_date__c</fullName>
        <label>Graduation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Industry_Experience__c</fullName>
        <label>Industry Experience</label>
        <picklist>
            <picklistValues>
                <fullName>VMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staffing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PEO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Last_date_viewed__c</fullName>
        <inlineHelpText>This is the last date the person was analyzed.</inlineHelpText>
        <label>Last date viewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LinkedIn_profile__c</fullName>
        <inlineHelpText>Copy and paste their profile URL here</inlineHelpText>
        <label>LinkedIn profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MBO_Position__c</fullName>
        <label>MBO Position</label>
        <picklist>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blogger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Analyst, Senior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Manager III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Service Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director of Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Major__c</fullName>
        <label>Major</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monster_Profile__c</fullName>
        <inlineHelpText>Copy and paste their profile URL here</inlineHelpText>
        <label>Monster Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Position_level__c</fullName>
        <label>Position level</label>
        <picklist>
            <picklistValues>
                <fullName>Entry level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior level</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Save_for_later__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save for later</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded via Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <picklist>
            <picklistValues>
                <fullName>JMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PENN ST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WVU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ODU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OKU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>University_other__c</fullName>
        <label>University (other)</label>
        <length>85</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wonderlic__c</fullName>
        <label>Wonderlic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Years_of_experience__c</fullName>
        <inlineHelpText>How many years of IC experience do they have?</inlineHelpText>
        <label>Years of experience</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Internal Recruiting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Recruiting</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Graduation_date</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Graduated__c =true,  ISBLANK(Graduation_date__c ) )</errorConditionFormula>
        <errorDisplayField>Graduation_date__c</errorDisplayField>
        <errorMessage>Please enter the graduation date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_University</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  ISPICKVAL( University__c ,&quot;Other&quot;),  ISBLANK( University_other__c )  )</errorConditionFormula>
        <errorDisplayField>University_other__c</errorDisplayField>
        <errorMessage>Enter other university</errorMessage>
    </validationRules>
</CustomObject>